Container issue fixed, where by chart spilled out of content container dropdown button functionality added to show list of selected values, and clear button

--- a/src/remarkable-ui/controls/Dropdown/MultiSelectDropdown/index.module.css
+++ b/src/remarkable-ui/controls/Dropdown/MultiSelectDropdown/index.module.css
@@ -34,7 +34,6 @@
 }
 
 .dropdownButtonItems {
-    flex: 1 1 auto;
     min-width: 0; 
     overflow: hidden;
     text-align: left;
@@ -44,7 +43,6 @@
 
 .dropdownButtonCount {
     flex: 0 0 auto;
-    margin-left: var(--dropdown-button-gap);
 }
 
 .dropdownButtonIconContainer,
