--- a/src/remarkable-ui/shared/CardContent/index.module.css
+++ b/src/remarkable-ui/shared/CardContent/index.module.css
@@ -4,4 +4,7 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    flex: 1;
+    min-height: 0;
+    /* overflow: auto; */
 }   
