--- a/src/remarkable-ui/shared/ControlCard/index.module.css
+++ b/src/remarkable-ui/shared/ControlCard/index.module.css
@@ -1,5 +1,5 @@
 .controlCard {
     display: flex;
     flex-direction: column;
-    gap: var(--surface-gap);
+    gap: var(--control-surface-gap);
 }
